--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@material-ui/core": "^3.9.3",
     "axios": "^0.18.0",
     "gatsby": "^2.3.15",
     "gatsby-image": "^2.0.37",
@@ -16,8 +17,11 @@
     "gatsby-transformer-sharp": "^2.1.17",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
+    "react-currency-format": "^1.0.0",
     "react-dom": "^16.8.6",
-    "react-helmet": "^5.2.0"
+    "react-helmet": "^5.2.0",
+    "react-number-format": "^4.0.7",
+    "xml2js": "^0.4.19"
   },
   "devDependencies": {
     "prettier": "^1.16.4"
